Update: Tabla eficiencia

--- a/Prototype_Santander_BEDU_jalisco.ipynb
+++ b/Prototype_Santander_BEDU_jalisco.ipynb
@@ -959,11 +959,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vp3wbS--IKeS",
-        "outputId": "55ba2eee-1b11-4612-a889-c22d55ec9341",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Vp3wbS--IKeS",
+        "outputId": "55ba2eee-1b11-4612-a889-c22d55ec9341"
       },
       "source": [
         "t_knn"
@@ -1135,11 +1135,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oc_CUHE_O4BW",
-        "outputId": "791cbb16-fe8e-4ce2-db2f-fe49c7fa9166",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Oc_CUHE_O4BW",
+        "outputId": "791cbb16-fe8e-4ce2-db2f-fe49c7fa9166"
       },
       "source": [
         "t_dtc"
@@ -1310,11 +1310,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UL28QTStQMgv",
-        "outputId": "f1045f78-f480-4a68-b067-fc522dff35d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UL28QTStQMgv",
+        "outputId": "f1045f78-f480-4a68-b067-fc522dff35d7"
       },
       "source": [
         "t_rfc"
@@ -1484,11 +1484,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l7lbW62LTxJU",
-        "outputId": "99d0e87f-0337-4f22-d2ae-d934d27700f7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l7lbW62LTxJU",
+        "outputId": "99d0e87f-0337-4f22-d2ae-d934d27700f7"
       },
       "source": [
         "t_dtr"
@@ -1660,11 +1660,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XZ7z8B_XUZOf",
-        "outputId": "f3785403-d033-4f5f-d718-a7292be88adf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XZ7z8B_XUZOf",
+        "outputId": "f3785403-d033-4f5f-d718-a7292be88adf"
       },
       "source": [
         "t_adtr"
@@ -1837,11 +1837,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HiKQVEbMXCZu",
-        "outputId": "a72f9791-4081-4229-d9fe-8248c1feb7fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HiKQVEbMXCZu",
+        "outputId": "a72f9791-4081-4229-d9fe-8248c1feb7fc"
       },
       "source": [
         "t_ann"
@@ -2018,11 +2018,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G2OPZ-B1brs9",
-        "outputId": "8ac8a912-7bab-426d-d951-11e6b92c3a2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G2OPZ-B1brs9",
+        "outputId": "8ac8a912-7bab-426d-d951-11e6b92c3a2e"
       },
       "source": [
         "t_svc"
@@ -2187,11 +2187,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qSYZ0GUbfJCa",
-        "outputId": "ff1d316a-c120-4ab6-f7e3-af779d538d69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qSYZ0GUbfJCa",
+        "outputId": "ff1d316a-c120-4ab6-f7e3-af779d538d69"
       },
       "source": [
         "t_naiv"
@@ -2311,8 +2311,154 @@
         "id": "xCV7uZAzfif4"
       },
       "source": [
-        ""
+        "## Eficiencia \n",
+        "\n",
+        "Ahora que hemos realizado distintas clasificaciones para el terreno, algo que resulta importante es analizar qué método de clasificación es el que brinda mejores resultados. Recordemos que el mejor método para hacer estas clasificaciones resultaría en el que entrega mejores predicciones con respecto a exactitud y precisión con respecto al tiempo de cálculo. "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2-7Aud47v2F7"
+      },
+      "source": [
+        "tiempos = np.array([t_knn, t_dtc, t_dtr, t_adtr, t_ann, t_svc, t_naiv])\n",
+        "presicion = np.array([precision_knn, precision_dtc, precision_dtr, precision_adtr, precision_ann, precision_svc, precision_naiv])\n",
+        "exactitud = np.array([exactitud_knn, exactitud_dtc, precision_dtr, exactitud_adtr, exactitud_ann, exactitud_svc, exactitud_naiv])"
+      ],
+      "execution_count": 210,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wOdFIEO-w8gV"
+      },
+      "source": [
+        "eficiencia = {'tiempo':tiempos, 'precision':presicion, 'exactitud':exactitud}"
+      ],
+      "execution_count": 218,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z2xHzQYDxh4r",
+        "outputId": "a486edeb-cc08-43a2-b6fe-251e6fa460a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 254
+        }
+      },
+      "source": [
+        "eficiencia = pd.DataFrame(dicc).sort_values(by = 'tiempo').reset_index(drop = True)\n",
+        "\n",
+        "eficiencia"
+      ],
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tiempo</th>\n",
+              "      <th>precision</th>\n",
+              "      <th>exactitud</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.303339</td>\n",
+              "      <td>88.644953</td>\n",
+              "      <td>96.239636</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>9.092993</td>\n",
+              "      <td>98.166556</td>\n",
+              "      <td>98.166556</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10.121550</td>\n",
+              "      <td>98.168062</td>\n",
+              "      <td>98.169589</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>35.924633</td>\n",
+              "      <td>99.086526</td>\n",
+              "      <td>99.256359</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>74.582471</td>\n",
+              "      <td>99.426027</td>\n",
+              "      <td>99.784910</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>207.339346</td>\n",
+              "      <td>99.369232</td>\n",
+              "      <td>99.366832</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>626.531049</td>\n",
+              "      <td>99.859025</td>\n",
+              "      <td>99.939494</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       tiempo  precision  exactitud\n",
+              "0    0.303339  88.644953  96.239636\n",
+              "1    9.092993  98.166556  98.166556\n",
+              "2   10.121550  98.168062  98.169589\n",
+              "3   35.924633  99.086526  99.256359\n",
+              "4   74.582471  99.426027  99.784910\n",
+              "5  207.339346  99.369232  99.366832\n",
+              "6  626.531049  99.859025  99.939494"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 220
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7mNNb0ORxiYZ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
